fixtures/codebase-analysis/systems-enqueue-rules/good/backend/systems/usage/processors.mts
import { enqueueBulkEmails } from '../email/enqueues.mts';

for (const batch of batches) {
  await enqueueBulkEmails(batch);
}
