fixtures/codebase-analysis/systems-enqueue-rules/bad/backend/systems/usage/processors.mts
import { enqueueEmail } from '../email/enqueues.mts';

for (const item of items) {
  await enqueueEmail(item);
}

await Promise.all([enqueueEmail(a), enqueueEmail(b)]);
